--- a/PhillipsConversion.csproj
+++ b/PhillipsConversion.csproj
@@ -11,13 +11,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="SFDC\APTS_CustomPricingCallBackHelper_Ultra.cs" />
-    <None Include="SFDC\APTS_CustomPricingCallBack_Switch.cs" />
+    <None Include="Phillips\SFDC\APTS_CustomPricingCallBackHelper_Ultra.cs" />
+    <None Include="Phillips\SFDC\APTS_CustomPricingCallBack_Switch.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Apttus.Lightsaber.Extensibility" Version="1.0.0.208" />
     <PackageReference Include="Apttus.Lightsaber.Pricing.Common" Version="2001.0.0.186" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Nokia\SFDC\" />
   </ItemGroup>
 
 </Project>
