--- a/PhillipsConversion.csproj
+++ b/PhillipsConversion.csproj
@@ -8,6 +8,11 @@
   <ItemGroup>
     <Compile Remove="APTS_CustomPricingCallBackHelper_Ultra.cs" />
     <Compile Remove="APTS_CustomPricingCallBack_Switch.cs" />
+    <Compile Remove="Nokia\SFDC\Nokia_PricingCallBack.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Nokia\SFDC\Nokia_PricingCallBack.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,10 +23,11 @@
   <ItemGroup>
     <PackageReference Include="Apttus.Lightsaber.Extensibility" Version="2001.0.1.22" />
     <PackageReference Include="Apttus.Lightsaber.Pricing.Common" Version="2001.0.0.210" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Nokia\SFDC\" />
+    <Folder Include="Nokia\SFDC Queries\" />
   </ItemGroup>
 
 </Project>
