--- a/PhillipsConversion.csproj
+++ b/PhillipsConversion.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Phillips\**" />
+    <EmbeddedResource Remove="Phillips\**" />
+    <None Remove="Phillips\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="APTS_CustomPricingCallBackHelper_Ultra.cs" />
     <Compile Remove="APTS_CustomPricingCallBack_Switch.cs" />
     <Compile Remove="Nokia\SFDC\Nokia_PricingCallBack.cs" />
@@ -16,13 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Phillips\SFDC\APTS_CustomPricingCallBackHelper_Ultra.cs" />
-    <None Include="Phillips\SFDC\APTS_CustomPricingCallBack_Switch.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Apttus.Lightsaber.Extensibility" Version="2020.9.0.5" />
-    <PackageReference Include="Apttus.Lightsaber.Pricing.Common" Version="2020.9.0.36" />
+    <PackageReference Include="Apttus.Lightsaber.Extensibility.Library" Version="2020.10.0.9" />
+    <PackageReference Include="Apttus.Lightsaber.Pricing.Common.Callback" Version="2020.10.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
